--- a/kivyapp/mainapp.kv
+++ b/kivyapp/mainapp.kv
@@ -4,13 +4,15 @@
     #size_hint: None, None
     #size: '200dp', '200dp'
     pos_hint: {'center_x': .5, 'center_y': .5}
-    #mode: 'rectangle'
+    mode: 'fill'
+    fill_color_focus: 1,50,50,10
+    color_active: 1,1,1,1
     hint_text: ''
     #icon_left: 'account'
     on_text_validate: False
     id: mem
     color_mode: 'primary'
-    on_text_validate:
+    on_text_validate:   self.parent.stow(self.text)           #root.stow()
 
 <MobileView>:
 
@@ -150,20 +152,22 @@ WindowManager:
                 #adaptive_size: True
                 #size: dp(400), dp(400)
                 halign: 'center'
+
                 MDTopAppBar:
                     icon: 'git'
                     #size: dp(400), dp(400)
                     mode: 'free-end'
                     title: 'Members'
                     #adaptive_size: True
+                    overflow_cls: app.OvrFlow()
                     left_action_items: [["plus", lambda x: layout.ad() ]]
                     #left_action_items: [["plus", lambda x: layout.add_widget(scr.Widget()) ]]
-                    right_action_items: [["minus", lambda x: layout.rem()]]
-                    on_action_button: self.root.current = 'next'
+                    right_action_items: [["minus", lambda x: layout.rem()], ['menu', lambda x: print(layout.children)]]
+
                 MDBottomNavigation:
                     title: 'hello world'
-                    MDFlatButton:
-                        text: 'hello'
+                    #MDFlatButton:
+                        #text: 'hello'
 
     MDScreen:
         name: 'next'
